[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://jungle.jpg" type="Texture" id=2]
[ext_resource path="res://setplatform.tres" type="TileSet" id=3]
[ext_resource path="res://Player01.tscn" type="PackedScene" id=4]
[ext_resource path="res://Item.tscn" type="PackedScene" id=5]
[ext_resource path="res://nextlevelchime.wav" type="AudioStream" id=6]
[ext_resource path="res://birds.wav" type="AudioStream" id=7]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 1036.02, 593.389 )
b = Vector2( -2.53387, 591.881 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 1.98813, 5.52615 )
b = Vector2( 1037.53, 2.51147 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 2.06937, 591.894 )
b = Vector2( 4.69727, 3.6021 )

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 8.55249, -37.7163 )
b = Vector2( 11.4536, 560.029 )

[node name="Main" type="Node2D"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
offset = Vector2( 512, 300 )
_sections_unfolded = [ "Offset" ]

[node name="TileOffset" type="Node2D" parent="." index="1"]

position = Vector2( -0.540405, 0.540283 )
__meta__ = {
"_edit_group_": true
}

[node name="TileMap" type="TileMap" parent="TileOffset" index="0"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -851994, 2, 0, 393225, 0, 0, 393226, 1, 0, 393227, 2, 0, 393228, 2, 0, 589838, 0, 0, 589839, 1, 0, 589840, 1, 0, 589841, 2, 0, 786450, 0, 0, 786451, 1, 0, 786452, 1, 0, 786453, 2, 0 )
_sections_unfolded = [ "Cell", "Collision", "Material", "Transform", "Visibility", "Z Index" ]

[node name="Player01" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 492.892, 532 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="3"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="collunten" type="CollisionShape2D" parent="StaticBody2D" index="0"]

shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="." index="4"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="colloben" type="CollisionShape2D" parent="StaticBody2D2" index="0"]

shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="." index="5"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="colllinks" type="CollisionShape2D" parent="StaticBody2D3" index="0"]

shape = SubResource( 3 )

[node name="StaticBody2D4" type="StaticBody2D" parent="." index="6"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="collrechts" type="CollisionShape2D" parent="StaticBody2D4" index="0"]

position = Vector2( 1008.89, 39.0774 )
shape = SubResource( 4 )

[node name="ItemArea" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( 383.47, 503.319 )

[node name="nextlevel" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="background" type="AudioStreamPlayer2D" parent="." index="9"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="ItemArea" to="." method="_on_ItemArea_body_entered"]

[connection signal="finished" from="nextlevel" to="." method="_on_nextlevel_finished"]


